--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -69,7 +69,7 @@
                     {{ form.username }}<br><br>
                   </div>
                   <div>
-                    <label for="username" style="font-size: 18px;">Password</label><br>
+                    <label for="password" style="font-size: 18px;">Password</label><br>
                     {{ form.password }}<br><br>
                   </div>
 
