--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -95,7 +95,7 @@
                   {{ form.panitia }}
               </label>
               <label style="margin-left: 80px;">
-                <span>pemilih</span>
+                <span>Pemilih</span>
                   {{ form.pemilih }}
                 <div></div>
               </label>
