--- a/panitia/templates/daftarkandidat.html
+++ b/panitia/templates/daftarkandidat.html
@@ -38,14 +38,14 @@
     }
 
     .window {
-        width: 700px;
-        height: 500px;
+        width: 67%;
+        height: 580px;
         background: #fff;
         border-radius: 10px;
         position: relative;
         padding: 5px;
         text-align: center;
-        margin-top: 5%;
+        margin-top: 4%;
         margin-left: 20%;
     }
     .windowhapus {
@@ -60,7 +60,7 @@
         margin-left: 30%;
     }
     .window h2 {
-        margin: 30px 0 0 0;
+        margin: 15px 0 0 0;
     }
       /* Button Close */
     .close-button {
@@ -124,21 +124,21 @@
                             <th scope="col" class="tabel">No</th>
                             <th scope="col" class="tabel">Nama</th>
                             <th scope="col" class="tabel">Nomer Urut</th>
-                            <th scope="col" class="tabel">Foto</th>
+                            <!-- <th scope="col" class="tabel">Foto</th> -->
                             <th scope="col" class="tabel">Action</th>
                         </tr>
                         </thead>
-                            {% for d in kandidat %}
+                            {% for d in data %}
                             
                             
                         <tbody>
                             <tr class="tabel">
                                 <td class="tabel" style="text-align: center;">{{forloop.counter}}</td>
-                                <td class="tabel">{{d.1}}</td>
-                                <td class="tabel" style="text-align: center;">{{d.2}}</td>
-                                <td class="tabel" style="text-align: center;"><img src="media/images/avatar.png" alt="avatar" style="width: 10px; height:10px;" ></td>
+                                <td class="tabel">{{d.namakandidat}}</td>
+                                <td class="tabel" style="text-align: center;">{{d.nomerurut}}</td>
+                                <!-- <td class="tabel" style="text-align: center;"><img src="" alt="avatar" style="width: 10px; height:10px;" >{{d.kandidat_Main_Img}}</td> -->
                                 <td style="align-items: center; text-align: center; font-size: 25px;">
-                                <a href="/editpemilih/{{d.id}}/edit"><i class='bx bxs-message-square-edit' style="color:#00ad04;"  ></i></a>
+                                <a href="/panitia/detailprofil/{{d.id}}"><i class='bx bxs-message-square-edit' style="color:#00ad04;"  ></i></a>
                                 <a href="#popuphapus"><i class='bx bxs-trash' style='color:#ff0303'  ></i></a>
                                     <div id="popuphapus">
                                         <div class="windowhapus">
@@ -146,7 +146,7 @@
                                             <h1 style="font-size: 80%; margin-bottom: 0; margin-top: 0;">Apa Anda Ingin Menghapusnya?</h1>
                                             
                                             <br>
-                                            <a href="{{d.id}}/delete"><button class="btn-hapus">Ya</button></a>
+                                            <a href="/panitia/detailprofil/{{d.id}}/delete"><button class="btn-hapus">Ya</button></a>
                                         </div>
                         
                                 </div>
@@ -174,69 +174,71 @@
                         <tr>
                             <td>No</td>
                             <td>:</td>
-                            <td><input type="number" id="nomerurut" name="nomerurut" style=" margin-top:10px; height: 20px; width: 500px; text-align: left;"></td>
+                            <td><input type="number" id="nomerurut" name="nomerurut" style=" margin-top:10px; height: 20px; width: 750px; text-align: left;"></td>
                         </tr>
                         <tr>
                             <td>Nama</td>
                             <td>:</td>
-                            <td><input type="text" id="namakandidat" name="namakandidat"  style=" margin-top:10px; height: 20px; width: 500px; text-align: left;"></td>
+                            <td><input type="text" id="namakandidat" name="namakandidat"  style=" margin-top:10px; height: 20px; width: 750px; text-align: left;"></td>
                         </tr>
                     <tr>
                         <td> Tempat Lahir </td>
                         <td>:</td>
-                        <td> <input type="text" id="tempatlahir" name="tempatlahir" style=" margin-top:10px; height: 20px; width: 500px; text-align: left;"> </td>
+                        <td> <input type="text" id="tempatlahir" name="tempatlahir" style=" margin-top:10px; height: 20px; width: 750px; text-align: left;"> </td>
                     </tr>
                     <tr>
                         <td> Tanggal Lahir </td>
                         <td>:</td>
-                        <td> <input type="date" id="tanggallahir" name="tanggallahir" style=" margin-top:10px; height: 20px; width: 500px; text-align: left;"> </td>
+                        <td> <input type="date" id="tanggallahir" name="tanggallahir" style=" margin-top:10px; height: 20px; width: 750px; text-align: left;"> </td>
                     </tr>
                     <tr>
                         <td> Alamat  </td>
                         <td>:</td>
-                        <td> <input type="text" id="alamat" name="alamat" style=" margin-top:10px; height: 20px; width: 500px; text-align: left;"> </td>
+                        <td> <input type="text" id="alamat" name="alamat" style=" margin-top:10px; height: 20px; width: 750px; text-align: left;"> </td>
                     </tr>
                     <tr>
                         <td> Pegalaman </td>
                         <td>:</td>
-                        <td><input type="text" id="pengalaman" name="pengalaman"  style=" margin-top:10px; height: 20px; width: 500px; text-align: left;"> </td>
+                        <td><input type="text" id="pengalaman" name="pengalaman"  style=" margin-top:10px; height: 20px; width: 750px; text-align: left;"> </td>
                     </tr>
                     <tr>
                         <td> Prestasi </td>
                         <td>:</td>
-                        <td><input type="text" id="prestasi" name="prestasi"  style=" margin-top:10px; height: 20px; width: 500px; text-align: left;"></td>
+                        <td><input type="text" id="prestasi" name="prestasi"  style=" margin-top:10px; height: 20px; width: 750px; text-align: left;"></td>
                     </tr>
                     <tr>
                         <td> Visi </td>
                         <td>:</td>
-                        <td><input type="text" id="visi" name="visi"  style=" margin-top:10px; height: 20px; width: 500px; text-align: left;"></td>
+                        <td><input type="text" id="visi" name="visi"  style=" margin-top:10px; height: 50px; width: 750px; text-align: left;"></td>
                     </tr>
                     <tr>
                         <td> misi </td>
                         <td>:</td>
-                        <td><input type=" text" id=" misi" name="misi"  style=" margin-top:10px; height: 20px; width: 500px; text-align: left;"></td>
+                        <td><input type=" text" id=" misi" name="misi"  style=" margin-top:10px; height: 50px; width: 750px; text-align: left;"></td>
                     </tr>
                     <tr>
                         <td> program kerja </td>
                         <td>:</td>
-                        <td><input type=" text" id="programkerja" name="programkerja" style=" margin-top:10px; height: 20px; width: 500px; text-align: left;"></td>
+                        <td><input type=" text" id="programkerja" name="programkerja" style=" margin-top:10px; height: 40px; width: 750px; text-align: left;"></td>
                     </tr>
-                    <tr>
+                    <!-- <tr>
                         <td>Foto kandidat</td>
                         <td>:</td>
                         <td><input type="file" id="kandidat_Main_Img" name="kandidat_Main_Img"></td>
-                    </tr>
+                    </tr> -->
                 </table>
                     <tr>
                         <td >
-                            <button style=" margin-top:30px; margin-left:115px; border: none;width: 15%; height:30px;border-radius:5px; background-color:#0275FC; font-size:15px; color:white;" type="submit"> Tambah </button>
-                            <a href="/detailprofil"><button style=" margin-top:30px; margin-left:20px;border: none;width: 15%; height:30px;border-radius:5px; background-color:#fd810d; font-size:15px; color:white;"> Kembali </button>
+                            <button style=" margin-top:15px; margin-left:400px; border: none;width: 15%; height:30px;border-radius:5px; background-color:#0275FC; font-size:15px; color:white;" type="submit"> Tambah </button>
+                            <!-- <a href="#"><button style=" margin-top:15px; margin-left:20px;border: none;width: 15%; height:30px;border-radius:5px; background-color:#fd810d; font-size:15px; color:white;"> Kembali </button> -->
                             </a>
                         </td>
                     </tr>
                 </form>
             </div>
         </div>
+
+        
         
     
 </section>
