--- a/panitia/templates/dashboard.html
+++ b/panitia/templates/dashboard.html
@@ -25,82 +25,86 @@
         }
         
         li a:hover {
-            background-color:  #67aaf7;
-            background-position: center;
-            border-radius: 10%;
-            text-decoration: black;
+            background-color:  #67aaf7; background-position: center; border-radius: 10%; text-decoration: black;
             }
+        .sidetop{
+            height: 10%;
+        }
+        .ultop{
+            list-style-type: none; margin: 0; padding: 0; overflow: hidden; background-color: #0275FC; border-top-left-radius: 15px; border-top-right-radius: 15px;
+        }
+        .ultop img{
+            float: left; width: 50px; height:48px; border-top-left-radius: 30%;
+        }
+        .judultop{
+            display: block; color: rgb(255, 255, 255); text-align: center; padding: 10px 16px; text-decoration: none; font-size: 25px;
+        }
+        .logout{
+            display: block; color: white; text-align: center; padding: 14px; text-decoration: none;
+        }
+        .namapanitia{
+            display: block; color: white; text-align: center; padding: 14px; text-decoration: none;
+        }
+        .sideleft{
+            height: 90%; float: left;border: black; color:rgb(78, 4, 4);
+        }
+        .ulleft{
+            float: left; list-style-type: none; margin-top: 1px; padding: 0; height: 595px; width: 200px; overflow: hidden; border-bottom-left-radius: 15px; border-color: black; color:black; background-color: #e1e1e4;
+        }
+        .lipanitia{
+            height: 8%;width: 200px; background-color: #0275FC; color: rgb(252, 248, 248); text-align: center; font-size: 20px;  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+        .lidash{
+            margin-top:20px; height: 6%; color: black; text-align: center; font-size: 17px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+        .likandidat{
+            margin-top:20px; height: 8%; color: rgb(10, 10, 10); text-align: center; font-size: 17px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+        .lipemilih{
+            margin-top:20px; height: 8%; color: rgb(7, 7, 7); text-align: center; font-size: 17px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+        .livoting{
+            margin-top:20px;height: 8%; color: rgb(7, 7, 7); text-align: center; font-size: 17px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+        .litambah{
+            margin-top:20px;height: 8%; color: rgb(7, 7, 7); text-align: center; font-size: 17px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
 
     </style>
 </head>
 <body>
     <div>
-        <div style="height: 10%;">
-            <ul style="list-style-type: none;
-                        margin: 0;
-                        padding: 0;
-                        overflow: hidden;
-                        background-color: #0275FC;
-                        border-top-left-radius: 15px;
-                        border-top-right-radius: 15px;">
+        <div class="sidetop">
+            <ul class="ultop">
                     
-                    <img src="https://saltwire.imgix.net/video-saturday-is-decision-day-for-municipal-elections-in-cape-breton-7.jpg?cs=srgb&fit=crop&h=568&w=847&dpr=1&auto=format%2Ccompress%2Cenhance" alt="" 
-                    style="float: left; width: 50px; height:45px; border-top-left-radius: 30%;">
-                    <li style="float: left;"><a href="#" style="display: block;
-                        color: rgb(255, 255, 255);
-                        text-align: center;
-                        padding: 6px 16px;
-                        text-decoration: none;
-                        font-size: 25px;"> E-Voting</a></li>
-                    
-                    <li style="float: right;"><a href="/logout" style="display: block;
-                        color: white;
-                        text-align: center;
-                        padding: 14px 16px;
-                        text-decoration: none;">
-                        <i class='bx bx-log-in' ></i>Logout</a></li>
-                    <li style="float: right;">
-                        
-                    <a href="#news" style="display: block;
-                        color: white;
-                        text-align: center;
-                        padding: 14px 16px;
-                        text-decoration: none;"><i class='bx bxs-user-circle' ></i>{{user.username}}</a></li>
+                    <img src="https://saltwire.imgix.net/video-saturday-is-decision-day-for-municipal-elections-in-cape-breton-7.jpg?cs=srgb&fit=crop&h=568&w=847&dpr=1&auto=format%2Ccompress%2Cenhance" alt="">
+                    <li style="float: left;"><a  href="#" class="judultop">E-Voting</a></li>
+                    <li style="float: right;"><a href="/logout" class="logout"><i class='bx bx-log-in'></i>Logout</a></li>
+                    <li style="float: right;"><a href="#news" class="namapanitia"><i class='bx bxs-user-circle' ></i>{{user.username}}</a></li>
             </ul>
-            </div>
+        </div>
         
-            <div style="height: 90%; float: left;border: black; color:rgb(78, 4, 4);">
-                <ul style="float: left
-                        ; list-style-type: none;
-                        margin-top: 1px;
-                        padding: 0;
-                        height: 595px;
-                        width: 200px;
-                        overflow: hidden;
-                        border-bottom-left-radius: 15px;
-                        border-color: black;
-                        color:black;
-                        background-color: #e1e1e4;
-                        ">
+        <div class="sideleft">
+            <ul class="ulleft">
         
                         <!-- sidebar -->
                     
-                    <li style="height: 8%;width: 200px; background-color: #0275FC; color: rgb(252, 248, 248); text-align: center; font-size: 20px;  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+                    <li class="lipanitia">
                         <i class='bx bxs-user-circle' style="margin-top: 12px;">{{user.username}}</i>
                     </li>
-                    <li style="margin-top:20px; height: 6%; color: black; text-align: center; font-size: 17px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+                    <li class="lidash">
                         <a href="/panitia"><i class='bx bx-home' style="color:black;" > Dashbord </i></a>
                     </li>
-                    <li style="margin-top:20px; height: 8%; color: rgb(10, 10, 10); text-align: center; font-size: 17px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+                    <li class="likandidat">
                         <a href="/panitia/daftarkandidat"><i class=' btn bx bx-bar-chart-square' style="color:black;" > Data kandidat</i></a>
                     </li>
-                    <li style="margin-top:20px; height: 8%; color: rgb(7, 7, 7); text-align: center; font-size: 17px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+                    <li class="lipemilih">
                         <a href="/panitia/datapemilih"><i class='bx bx-spreadsheet' style="color:black;" > Data Pemilih  </i></a>
                     </li>
-                    <li style="margin-top:20px;height: 8%; color: rgb(7, 7, 7); text-align: center; font-size: 17px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+                    <li class="livoting">
                         <a href="/panitia/datavoting"><i class='bx bx-data' style="color:black;" > Data Voting    </i></a>
                     </li>
-                    <li style="margin-top:20px;height: 8%; color: rgb(7, 7, 7); text-align: center; font-size: 17px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+                    <li class="litambah">
                         <a href="/panitia/tambahpanitia"><i class='bx bx-plus-circle' style="color:black;"> Tambah Panitia </i></a>
                     </li>
                 </ul>
