--- a/panitia/templates/editkandidat.html
+++ b/panitia/templates/editkandidat.html
@@ -16,6 +16,11 @@
                     <td><input type="text" name="namakandidat" value="{{data.namakandidat}}" style=" margin-top:10px; height: 20px; width: 500px; text-align: left;"></td>
                 </tr>
                 <tr>
+                    <td>No Urut</td>
+                    <td>:</td>
+                    <td><input type="number" name="nomerurut" value="{{data.nomerurut}}" style=" margin-top:10px; height: 20px; width: 500px; text-align: left;"></td>
+                </tr>
+                <tr>
                     <td>  tempatlahir </td>
                     <td>:</td>
                     <td><input type="text"  name="tempatlahir" value="{{data.tempatlahir}}" style=" margin-top:10px; height: 20px; width: 500px; text-align: left;"></td>
@@ -23,7 +28,7 @@
                 <tr>
                     <td> tanggallahir  </td>
                     <td>:</td>
-                    <td> <input type="number"  name="tanggallahir" value="{{data.tanggallahir}}" style=" margin-top:10px; height: 20px; width: 500px; text-align: left;"> </td>
+                    <td> <input type="date"  name="tanggallahir" value="{{data.tanggallahir}}" style=" margin-top:10px; height: 20px; width: 500px; text-align: left;"> </td>
                 </tr>
                 <tr>
                     <td> Alamat </td>
@@ -57,10 +62,8 @@
                 </tr>
                 
                 <tr>
-                    <td></td>
-                    <td></td>
                     <td >
-                    <a href="panitia/daftarkandidat"></a><button style=" margin-top:30px; margin-left:115px; border: none;width: 15%; height:30px;border-radius:5px; background-color:#0275FC; font-size:15px; color:white;" type="submit"> Simpan </button>
+                    <a href="panitia/daftarkandidat"><button style=" margin-top:30px; margin-left:115px; border: none;width: 15%; height:30px;border-radius:5px; background-color:#0275FC; font-size:15px; color:white;" type="submit"> Simpan </button></a>
                     <a href="#"><button style=" margin-top:30px; margin-left:20px;border: none;width: 15%; height:30px;border-radius:5px; background-color:#fd810d; font-size:15px; color:white;"> Kembali </button>
                     </a>
                     </td>
