--- a/pemilih/templates/dashboard2.html
+++ b/pemilih/templates/dashboard2.html
@@ -17,7 +17,7 @@
                     margin: 0;
                     padding: 0;
                     overflow: hidden;
-                    background-color: #0275FC;
+                    background-color: #06A003;
                     border-top-left-radius: 15px;
                     border-top-right-radius: 15px;}
         .iconprofil {float: left; width: 50px; height:45px; border-top-left-radius: 30%;}
