--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -9,16 +9,10 @@
     <title>Multiple Login</title>
     <style>
       #id_username {
-        height: 22px;
-        width: 225px;
-        border-radius: 5px;
-        margin-top: 5px;
+        height: 22px; width: 225px; border-radius: 5px; margin-top: 5px;
       }
       #id_password{
-        height: 22px;
-        width: 225px;
-        border-radius: 5px;
-        margin-top: 5px;
+        height: 22px; width: 225px; border-radius: 5px; margin-top: 5px;
       }
       .kiri img{
         float: left; width: 60px; height:55px; margin-left: 10px; margin-top: 10px; border-radius: 5px;
@@ -27,7 +21,7 @@
         float: left; font-size: 23px; margin-top: 25px; margin-left: 10px; color: white;
       }
       .content{
-        background-color: #0275FC; height: 510px; align-content: center; padding-top: 10%; border-radius: 10px;
+        background-color: #06A003; height: 510px; align-content: center; padding-top: 10%; border-radius: 10px;
       }
       .menu{
         background-color:white; height: 75%; width: 90%; border-radius: 15px; margin-left: auto; margin-right:auto; display: flex;
@@ -73,11 +67,11 @@
                     {{ form.password }}<br><br>
                   </div>
 
-                    <input type="submit" value="Login" style="width: 225px;  height: 30px; font-size: 15px; margin-top: 15px; border-radius: 5px; background-color: #0275FC; color: white; ">
+                    <input type="submit" value="Login"
+                    style="width: 225px;  height: 30px; font-size: 15px; margin-top: 15px; border-radius: 5px; background-color: #06A003; color: white; ">
                 </form>
                 <div>
-                    <h2><a href="{% url 'register' %}"><button style="width: 225px;  height: 30px; font-size: 15px; margin-top: 5px; border-radius: 5px; background-color: green; color: white;">
-                        Register</button></a></h2>
+                    <p>Belum punya akun? Silahkan<a href="{% url 'register' %}" style="color: black;"> Registrasi</a></p>
                 </div>
       </div>    
     </div>
