--- a/panitia/templates/daftarkandidat.html
+++ b/panitia/templates/daftarkandidat.html
@@ -4,102 +4,39 @@
 
 <style>
     .poto{
-        height: 5px;
-        width: 5px;
+        height: 5px; width: 5px;
     }    
     .tabel{
-        height: 40px;
-        border: 1px solid black;
-        border-collapse: collapse;
-        padding-left: 8px;
-        font-size: 17px;
+        height: 40px; border: 1px solid black; border-collapse: collapse; padding-left: 8px; font-size: 17px;
         
     }
 
     #popup1 {
-        width: 100%;
-        height: 120%;
-        position: fixed;
-        background: rgba(0,0,0,.7);
-        top: 0;
-        left: 0;
-        z-index: 9999;
-        visibility: hidden;
+        width: 100%; height: 120%; position: fixed; background: rgba(0,0,0,.7); top: 0; left: 0; z-index: 9999; visibility: hidden;
     }
     #popuphapus {
-        width: 100%;
-        height: 120%;
-        position: fixed;
-        background: rgba(0,0,0,.7);
-        top: 0;
-        left: 0;
-        z-index: 9999;
-        visibility: hidden;
+        width: 100%; height: 120%; position: fixed; background: rgba(0,0,0,.7); top: 0; left: 0; z-index: 9999; visibility: hidden;
     }
 
     .window {
-        width: 67%;
-        height: 580px;
-        background: #fff;
-        border-radius: 10px;
-        position: relative;
-        padding: 5px;
-        text-align: center;
-        margin-top: 4%;
-        margin-left: 20%;
+        width: 67%; height: 580px; background: #fff; border-radius: 10px; position: relative; padding: 5px; text-align: center; margin-top: 4%; margin-left: 20%;
     }
     .windowhapus {
-        width: 700px;
-        height: 100px;
-        background: #fff;
-        border-radius: 10px;
-        position: relative;
-        padding: 5px;
-        text-align: center;
-        margin-top: 5%;
-        margin-left: 30%;
+        width: 700px; height: 100px; background: #fff; border-radius: 10px; position: relative; padding: 5px; text-align: center; margin-top: 5%; margin-left: 30%;
     }
     .window h2 {
         margin: 15px 0 0 0;
     }
       /* Button Close */
     .close-button {
-        width: 3%;
-        height: 6%;
-        line-height: 23px;
-        background: #000;
-        border-radius: 50%;
-        border: 3px solid #fff;
-        display: block;
-        text-align: center;
-        color: #fff;
-        text-decoration: none;
-        position: absolute;
-        top: -10px;
-        right: -10px;	
+        width: 3%; height: 6%; line-height: 23px; background: #000; border-radius: 50%; border: 3px solid #fff; display: block; text-align: center; color: #fff; text-decoration: none; position: absolute; top: -10px; right: -10px;	
     }
     .close-buttonhapus {
-        width: 3%;
-        height: 18%;
-        line-height: 23px;
-        background: #000;
-        border-radius: 50%;
-        border: 3px solid #fff;
-        display: block;
-        text-align: center;
-        color: #fff;
-        text-decoration: none;
-        position: absolute;
-        top: -10px;
-        right: -10px;	
+        width: 3%; height: 18%; line-height: 23px; background: #000; border-radius: 50%; border: 3px solid #fff; display: block;
+        text-align: center; color: #fff; text-decoration: none; position: absolute; top: -10px; right: -10px;	
     }
     .btn-hapus{
-        width: 10%;
-        height: 25%;
-        background-color: red;
-        border-radius: 5px;
-        color: white;
-        font-weight: bold;
+        width: 10%; height: 25%; background-color: red; border-radius: 5px; color: white; font-weight: bold;
     }
     /* Memunculkan Jendela Pop Up*/
     #popup1:target {
@@ -108,35 +45,49 @@
     #popuphapus:target {
         visibility: visible;
     }
+    .btn-back{
+        width: 13%; height: 30px; background-color: #FC5C02; color: white; border-radius: 10px; font-weight: bold;
+    }
+    .btn-back1{
+        margin-top:15px; margin-left:20px;border: none;width: 15%; height:30px;border-radius:5px; background-color:#fd810d; font-size:15px; color:white;
+    }
+    .btn-tambah{
+        margin-top:15px; margin-left:400px; border: none;width: 15%; height:30px;border-radius:5px; background-color:#0275FC; font-size:15px; color:white;
+    }.btn-data{
+        margin-left: 78%; margin-top: 350px; border: none; width: 13%; height:30px; border-radius: 10px; background-color:#06A003; color:white; font-weight: bold;
+    }
 </style>
 
 <section>
     <div>
-        <div style="width: 1130px; height: 595px; position: absolute; right: 8px;  border-bottom-right-radius: 15px ">
+        <div>
         
-            <div style=" margin-top: 20px; margin-left:20px;">
-                <h2> Data Calon Kandidat </h2>
-                    <a href="#popup1"><button style=" border: none; width: 13%; height:30px; border-radius: 10px; background-color:#0275FC; font-size:15px; color:white; font-weight: bold;"> Tambah Kandidat</button> </h2>
-                    </a>
+            <div style=" margin-top: 20px; margin-left: 78px;">
+                <h2> Data Kandidat </h2>
+                <a href="/panitia"><button class="btn-back">Kembali</button></a>
                     <table class="tabel" style="width: 90%; border-collapse: collapse; margin-top:20px;">
                         <thead>    
                         <tr class="tabel" style="text-align: center; margin-top:40px;">
                             <th scope="col" class="tabel">No</th>
                             <th scope="col" class="tabel">Nama</th>
                             <th scope="col" class="tabel">Nomer Urut</th>
-                            <!-- <th scope="col" class="tabel">Foto</th> -->
+                            <th scope="col" class="tabel">Foto</th>
                             <th scope="col" class="tabel">Action</th>
                         </tr>
                         </thead>
-                            {% for d in data %}
+                            {% for d in kandidat %}
                             
                             
                         <tbody>
                             <tr class="tabel">
-                                <td class="tabel" style="text-align: center;">{{forloop.counter}}</td>
-                                <td class="tabel">{{d.namakandidat}}</td>
-                                <td class="tabel" style="text-align: center;">{{d.nomerurut}}</td>
-                                <!-- <td class="tabel" style="text-align: center;"><img src="" alt="avatar" style="width: 10px; height:10px;" >{{d.kandidat_Main_Img}}</td> -->
+                                <td class="tabel" style="text-align: center;">
+                                    {{forloop.counter}}</td>
+                                <td class="tabel">
+                                    {{d.namakandidat}}</td>
+                                <td class="tabel" style="text-align: center;">
+                                    {{d.nomerurut}}</td>
+                                <td class="tabel" style="text-align: center;"><img src="{{d.kandidat_Main_Img}}" alt="avatar" style="width: 10px; height:10px;" >
+                                    {{d.kandidat_Main_Img}}</td>
                                 <td style="align-items: center; text-align: center; font-size: 25px;">
                                 <a href="/panitia/detailprofil/{{d.id}}"><i class='bx bxs-message-square-edit' style="color:#00ad04;"  ></i></a>
                                 <a href="#popuphapus"><i class='bx bxs-trash' style='color:#ff0303'  ></i></a>
@@ -150,6 +101,7 @@
                                         </div>
                         
                                 </div>
+                                
                                 </td>
                                 
                             </tr>
@@ -159,6 +111,7 @@
                         </tbody>   
                         </table>
             </div>
+            
     
         </div>
     </div>
@@ -169,8 +122,9 @@
                     <h2>Tambahkan Data kandidat</h2>
                     <form method="POST" action="" enctype="multipart/form-data">
                     {% csrf_token %}
-                    
-                    <table >
+                    {{ form }}
+                    <!-- <table >
+                        
                         <tr>
                             <td>No</td>
                             <td>:</td>
@@ -221,22 +175,23 @@
                         <td>:</td>
                         <td><input type=" text" id="programkerja" name="programkerja" style=" margin-top:10px; height: 40px; width: 750px; text-align: left;"></td>
                     </tr>
-                    <!-- <tr>
+                    <tr>
                         <td>Foto kandidat</td>
                         <td>:</td>
                         <td><input type="file" id="kandidat_Main_Img" name="kandidat_Main_Img"></td>
-                    </tr> -->
+                    </tr>
                 </table>
                     <tr>
-                        <td >
-                            <button style=" margin-top:15px; margin-left:400px; border: none;width: 15%; height:30px;border-radius:5px; background-color:#0275FC; font-size:15px; color:white;" type="submit"> Tambah </button>
-                            <!-- <a href="#"><button style=" margin-top:15px; margin-left:20px;border: none;width: 15%; height:30px;border-radius:5px; background-color:#fd810d; font-size:15px; color:white;"> Kembali </button> -->
+                        <td > -->
+                            <button class="btn-tambah" type="submit" name="submit"> Tambah </button>
+                            <a href="#"><button class="btn-back1"> Kembali </button>
                             </a>
                         </td>
                     </tr>
                 </form>
             </div>
         </div>
+        <a href="#popup1"><button class="btn-data"> Tambah Kandidat</button> </h2></a>
 
         
         
