--- a/pemilih/templates/voting.html
+++ b/pemilih/templates/voting.html
@@ -29,13 +29,13 @@
             font-size: 20px; font-weight: bold; margin-top: 10px; margin-bottom: 10px;
         }
         #popup1 { 
-            width: 100%; height: 100%; position: fixed; background: rgba(0,0,0,.5); top: 0; left: 0; z-index: 9999; visibility: hidden;
+            width: 100%; height: 100%; position: fixed; background: rgba(0,0,0,.5); top: 0; left: 0px; z-index: 9999; visibility: hidden;
         }
         #popup2 {
             width: 100%; height:100%; position: fixed; background: rgba(0,0,0,.5); top: 0; left: 0; z-index: 9999; visibility: hidden;
         }
         .window {
-            width: 500px; height: 125px; background: #fff; border-radius: 10px; position: relative; padding: 5px; text-align: center; margin-top: 10%; margin-left: 27%;
+            width: 500px; height: 125px; background: #fff; border-radius: 10px; position: relative; padding: 5px; text-align: center; margin-top: 10%; margin-left: 32%;
         }
         .close-button {
             width: 20px; height: 21px; line-height: 23px; background: rgba(0,0,0,.9); border-radius: 50%; border: 3px solid #fff; display: block; text-align: center; color: #fff; text-decoration: none; position: absolute; top: 10px; right: 10px;	
@@ -50,11 +50,20 @@
         input {
             width: 250px; height: 25px; border: 1px solid black; border-radius: 5px;
         }
+        .btn-vote{
+            font-weight: bold; color: white; background-color: #06A003; margin-top: 6px; width: 100px; height: 30px; border-radius: 5px;
+        }
+        .btn-yes{
+            font-weight: bold; color: white; background-color: #06A003; margin-top: 0px; width: 75px; height: 30px; border-radius: 5px
+        }
+        .btn-no{
+            font-weight: bold; color: white; background-color: red; margin-top: 0px; width: 75px; height: 30px; border-radius: 5px;
+        }
             
     </style>
 
     <div>
-        <div style="margin-left: 10%; margin-right: 10%; display: block; width: 75%; height: 92%; position: absolute;">
+        <div style="margin-left: 12%; margin-right: 10%; display: block; width: 75%; height: 92%; position: absolute;">
             <!-- BOX JUDUL -->
             <div class="boxjudul">
                 <header class="header">
@@ -76,21 +85,17 @@
                     <h4 class= "">NO.1</h4>
                     <img class="foto" src="https://cdn.icon-icons.com/icons2/2406/PNG/512/user_account_icon_145918.png" alt="">
                     <p>Brodiq</p>
-                    <a href="#popup1"><button style="font-weight: bold; color: white; background-color: #0275FC; margin-top: 6px; width: 100px; height: 30px; border-radius: 5px;">
-                        Pilih</button></a>
+                    <a href="#popup1"><button class="btn-vote">Pilih</button></a>
     
                     <div id="popup1">
                         <div class="window">
                             <a href="#" class="close-button" title="Close">X</a>
                             <h3 style="margin-top: 25px;;">Apakah Pilihan Anda Sudah Benar?</h3>
-                                <a href="#popup2"><button style="font-weight: bold; color: white; background-color: #0275FC; margin-top: 0px; width: 75px; height: 30px; border-radius: 5px;">
-                                    Iya</button></a>
-                        
-                                <a href="#"><button style="font-weight: bold; color: white; background-color: red; margin-top: 0px; width: 75px; height: 30px; border-radius: 5px;">
-                                    Tidak</button></a>
+                                <a href="/"><button class="btn-yes" type="submit">Iya</button></a>
+                                <a href="#"><button class="btn-no">Tidak</button></a>
                         </div>
                     </div>
-                    <div id="popup2">
+                    <!-- <div id="popup2">
                         <div class="window">
                             <form method="post">
                                 {% csrf_token %}
@@ -103,43 +108,39 @@
                             </form>
                         </div>
     
-                    </div>
+                    </div> -->
     
                 </div>
                 <div class="boxfoto">
                     <h4 class= "">NO.2</h4>
                     <img class="foto" src="https://cdn.icon-icons.com/icons2/2406/PNG/512/user_account_icon_145918.png" alt="">
                     <p>Brozam</p>
-                    <a href="#popup1"><button style="font-weight: bold; color: white; background-color: #0275FC; margin-top: 6px; width: 100px; height: 30px; border-radius: 5px;">
-                        Pilih</button></a>
+                    <a href="#popup1"><button class="btn-vote">Pilih</button></a>
     
-                    <div id="popup1">
+                    <div id="popup2">
                         <div class="window">
                             <a href="#" class="close-button" title="Close">X</a>
                             <h3 style="margin-top: 25px;;">Apakah Pilihan Anda Sudah Benar?</h3>
-                                <a href="#popup2"><button style="font-weight: bold; color: white; background-color: #0275FC; margin-top: 0px; width: 75px; height: 30px; border-radius: 5px;">
-                                    Iya</button></a>
-                        
-                                <a href="#"><button style="font-weight: bold; color: white; background-color: red; margin-top: 0px; width: 75px; height: 30px; border-radius: 5px;">
-                                    Tidak</button></a>
+                                <a href="/"><button class="btn-yes" type="submit">Iya</button></a>
+                                <a href="#"><button class="btn-no">Tidak</button></a>
                         </div>
     
                     </div>
-                    <div id="popup2">
+                     <!-- <div id="popup2">
                         <div class="window">
                             <a href="#" class="close-button" title="Close">X</a>
                             <h3 style="margin-top: 10px;">Masukkan Pin Anda</h3>
                                 <form action="/pemilih/hasilvoting">
                                     <center>
                                         <input type="password" id= "psw" name="password"><br>
-                                        <!-- <input type="submit" value="submit"> -->
+                                        <input type="submit" value="submit">
                                         <input type="submit" formaction="/pemilih/hasilvoting" value="Submit"
                                         style="margin-top: 10px; width: 75px; height: 25px;border-radius: 5px; color: white; background-color: #0275FC;">
                                     </center>
                                 </form>
                         </div>
     
-                    </div>
+                    </div> -->
     
                 </div>
         </div>
