--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -106,21 +106,21 @@
                     {{ form.username }}<br>
                 </div>
                 <div>
-                  <label for="NIK" style="font-size: 18px;">NIM</label><br>
-                    {{ form.NIM }}<br>
+                  <label for="email" style="font-size: 18px;">Email</label><br>
+                    {{ form.email }}<br>
                 </div>
               </div>
               <div class="tengah1" style="margin-top: 10px;">
                 <div>
-                  <label for="email" style="font-size: 18px;">Email</label><br>
-                    {{ form.email }}<br>
+                  <label for="password" style="font-size: 18px;">Password</label><br>
+                    {{ form.password1 }}<br>
                 </div>
                 <div>
-                  <label for="Nohandphone" style="font-size: 18px;">Nohandphone</label><br>
-                    {{ form.Nohandphone }}<br>
+                  <label for="password" style="font-size: 18px;">Konfirmasi Password</label><br>
+                    {{ form.password2 }}<br>
                 </div>
               </div>
-              <div class="kanantengah" style="margin-top: 10px;">
+              <!-- <div class="kanantengah" style="margin-top: 10px;">
                 <div>
                   <label for="password" style="font-size: 18px;">Password</label><br>
                     {{ form.password1}}<br>
@@ -129,7 +129,7 @@
                   <label for="password" style="font-size: 18px;">Konfirmasi Password</label><br>
                     {{ form.password2 }}<br>
                 </div>
-              </div>
+              </div> -->
               <!-- <div style="display: grid; margin-top: 10px;">
                 <div>
                   <label for="password" style="font-size: 18px;">Confirm Password</label><br>
@@ -138,12 +138,12 @@
               </div> -->
               <div class="flex-container" style="font-size: 18px; margin-top: 20px;">
               <label>
-                <!-- <span>Panitia</span>
+                <span>Panitia</span>
                   {{ form.panitia }}
               </label>
-              <label style="margin-left: 80px;">
+              <!-- <label style="margin-left: 80px;">
                 <span>Pemilih</span>
-                  {{ form.pemilih }} -->
+                  {{ form.pemilih }}  -->
                 <div></div>
               </label>
               </div>
